# OS-Simulator

./: README.md
backend/: CMakeLists.txt  main.cpp
backend/api/: Server.cpp  Server.h
backend/core/: DeadlockDetector.cpp  DeadlockDetector.h  DiskSchedular.cpp  DiskScheduler.h  MemoryManager.cpp  MemoryManager.h  PageReplacement.cpp  PageReplacement.h  Process.h  Schedular.cpp  Scheduler.h  Utils.h
os-sim-frontend/: package-lock.json  package.json
os-sim-frontend/src/: App.jsx  api.js  index.css
os-sim-frontend/src/component/: ProcessForm.jsx
